[package]
name = "enneagram"
version = "1.0.1"
edition = "2024"
license = "GPL-3.0"
description = "A digital enneagram"
repository = "https://github.com/sigurd4/enneagram"
keywords = ["enneagram", "personality", "psychology", "occult"]
categories = ["algorithms", "mathematics"]

[features]
default = []
blasphemy = ["dep:rand"]

[dependencies]
moddef = "0.3.0"
enum-display = "0.2.1"
rand = {version = "0.10.0", optional = true}
