[package]
name = "enneagram"
version = "1.0.2"
edition = "2024"
license = "GPL-3.0"
description = "A digital enneagram"
repository = "https://github.com/sigurd4/enneagram"
keywords = ["enneagram", "personality", "psychology", "occult", "enneatype"]
categories = ["algorithms", "mathematics"]

[features]
default = ["artwork", "pivot"]
blasphemy = ["dep:rand"]
pivot = []
artwork = ["dep:ratatui", "dep:ratatui-3d"]

[dependencies]
moddef = "0.3.0"
enum-display = "0.2.1"
rand = {version = "0.10.1", optional = true}
ratatui-3d = {version = "0.1.0", optional = true}
ratatui = {version = "0.30.0", optional = true}